--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a {
 header,
 main,
 footer {
-  display: block;
+  display: none;
   -webkit-animation: spin-animate;
   -webkit-animation-duration: 1s;
   animation: spin-animate;
@@ -275,10 +275,10 @@ header {
 }
 h1 {
   margin-top: 30px;
-  font-family: "Comfortaa";
+  font-family: "Poppins";
   letter-spacing: 4px;
-  -webkit-text-stroke: 2px #03182d;
-  color: transparent;
+  /* -webkit-text-stroke: 2px #03182d; */
+  color: white;
   margin-bottom: 4px;
   transform: translate(0px, -100px);
   transition: all 0.9s ease;
@@ -919,6 +919,18 @@ h5 {
   .nav-link.active {
     text-shadow: none;
   }
+}
+
+/* Research page styling */
+.main-topic,
+.sub-topic {
+  font-family: "Poppins";
+}
+
+.abstract-description {
+  font-family: sans-serif;
+  font-weight: 500;
+  text-align: justify !important;
 }
 /*
   Designer & Developer - workitsilas
